chore: refactor static use of MonitorRpcClient
Refs: XRDDEV-2839